--- a/src/views/anime/anime-search-mobile.ejs
+++ b/src/views/anime/anime-search-mobile.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buscar Anime - NakamaStream</title>
-    <link rel="shortcut icon" href="/src/public/favicons/favicon-16x16.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://github.com/NakamaStream/Resources/blob/main/NakamStream-logo-HD-removebg.png?raw=true" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -57,6 +57,7 @@
                     <div class="hidden md:flex space-x-4">
                         <a href="/" class="border-b-2 border-orange-500 text-gray-900 text-sm font-medium transition duration-300 hover:scale-110 hover:text-orange-500">Inicio</a>
                         <a href="/news" class="border-b-2 border-transparent text-gray-500 hover:border-orange-500 hover:text-orange-500 text-sm font-medium transition duration-300 hover:scale-110">Noticias</a>
+                        <a href="/calendario" class="border-b-2 border-transparent text-gray-500 hover:border-orange-500 hover:text-orange-500 text-sm font-medium transition duration-300 hover:scale-110">Calendario</a>
                         <a href="/animes/api/saved-animes" class="border-b-2 border-transparent text-gray-500 hover:border-orange-500 hover:text-orange-500 text-sm font-medium transition duration-300 hover:scale-110">Guardados</a>
 
                         <!-- User Menu -->
@@ -89,7 +90,7 @@
                     <a href="/news" class="block px-4 py-2 text-gray-700 hover:bg-orange-100 transition duration-300 hover:pl-5">
                         <i class="fa-solid fa-newspaper mr-2"></i> Noticias
                     </a>
-                    <a href="/soon" class="block px-4 py-2 text-gray-700 hover:bg-orange-100 transition duration-300 hover:pl-5">
+                    <a href="/calendario" class="block px-4 py-2 text-gray-700 hover:bg-orange-100 transition duration-300 hover:pl-5">
                         <i class="fa-solid fa-calendar mr-2"></i> Calendario
                     </a>
                     <a href="/animes/api/search" class="block px-4 py-2 text-gray-700 hover:bg-orange-100 transition duration-300 hover:pl-5">
@@ -133,13 +134,6 @@
                 </div>
             </div>
         </nav>
-
-        <br>
-        <!-- Aviso -->
-        <div class="bg-red-500 text-white text-center p-4 font-semibold rounded-lg shadow-lg flex items-center justify-center mx-4 sm:mx-6 lg:mx-8">
-            <span class="block md:inline">La plataforma ha alcanzado su primera versión estable. Por favor, notifique cualquier error o bug que encuentre.</span>
-        </div>
-        <br>
 
         <div class="container mx-auto px-4 py-6 sm:py-8">
             <h2 class="text-2xl font-bold mb-4 text-center text-gray-800">Buscar Anime</h2>
