--- a/src/public/css/anime-list.css
+++ b/src/public/css/anime-list.css
@@ -7,6 +7,10 @@ body {
     display: none;
 }
 
+.carousel-container {
+    scroll-behavior: smooth;
+}
+
 .waifu-noresul {
     animation: slideInLeft 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
     mask-image: linear-gradient(
