--- a/src/views/anime/anime-detail.ejs
+++ b/src/views/anime/anime-detail.ejs
@@ -154,6 +154,20 @@
                             </svg>
                         <% } %>
                     </div>
+                </div>
+                
+                <div class="flex justify-start items-center mb-6 animate-fade-in">
+                    <div class="flex items-center space-x-3 px-4 py-2 bg-white rounded-full shadow-md border border-gray-200 transition-all duration-300 hover:shadow-lg">
+                        <!-- Icono de calendario -->
+                        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 3h-1V2a1 1 0 00-2 0v1H8V2a1 1 0 00-2 0v1H5a2 2 0 00-2 2v16a2 2 0 002 2h14a2 2 0 002-2V5a2 2 0 00-2-2zM5 19V8h14v11H5z" />
+                        </svg>
+                        <!-- Texto 'Fecha de Estreno' y la fecha formateada -->
+                        <span class="text-lg font-semibold text-gray-800">Fecha de Estreno:</span>
+                        <span class="text-lg text-gray-800">
+                            <%= new Date(anime.release_date).toLocaleDateString('es-ES', { day: '2-digit', month: '2-digit', year: 'numeric' }) %>
+                        </span>
+                    </div>
                 </div>                
     
                 <h2 class="text-2xl font-semibold mb-4 anime-titles">Episodios</h2>
