--- a/src/views/anime/anime-detail-mobile.ejs
+++ b/src/views/anime/anime-detail-mobile.ejs
@@ -161,6 +161,40 @@
                     <button id="readMoreBtn" class="btm-episode text-white font-bold py-1 px-2 rounded-full hidden">
                         Seguir leyendo
                     </button>
+                    <br>
+                    <br>
+                    <div class="flex justify-start items-center mb-6 animate-fade-in">
+                        <div class="flex items-center space-x-3 px-4 py-2 bg-white rounded-full shadow-md border border-gray-200 transition-all duration-300 hover:shadow-lg">
+                            <span class="flex-shrink-0 w-3 h-3 rounded-full <%= anime.status === 'ongoing' ? 'bg-green-500 animate-pulse' : 'bg-blue-500' %>"></span>
+                            <span class="text-lg font-semibold text-gray-800">
+                                <%= anime.status === 'ongoing' ? 'En Emisión' : 'Completado' %>
+                            </span>
+                            <% if (anime.status === 'ongoing') { %>
+                                <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-green-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z" />
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                </svg>
+                            <% } else { %>
+                                <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-blue-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                </svg>
+                            <% } %>
+                        </div>
+                    </div>
+                    
+                    <div class="flex justify-start items-center mb-6 animate-fade-in">
+                        <div class="flex items-center space-x-3 px-4 py-2 bg-white rounded-full shadow-md border border-gray-200 transition-all duration-300 hover:shadow-lg">
+                            <!-- Icono de calendario -->
+                            <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 3h-1V2a1 1 0 00-2 0v1H8V2a1 1 0 00-2 0v1H5a2 2 0 00-2 2v16a2 2 0 002 2h14a2 2 0 002-2V5a2 2 0 00-2-2zM5 19V8h14v11H5z" />
+                            </svg>
+                            <!-- Texto 'Fecha de Estreno' y la fecha formateada -->
+                            <span class="text-lg font-semibold text-gray-800">Fecha de Estreno:</span>
+                            <span class="text-lg text-gray-800">
+                                <%= new Date(anime.release_date).toLocaleDateString('es-ES', { day: '2-digit', month: '2-digit', year: 'numeric' }) %>
+                            </span>
+                        </div>
+                    </div> 
     
                     <h2 class="text-xl md:text-2xl font-semibold mb-4 anime-titles">Episodios</h2>
                     <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-2 md:gap-4 mb-6">
