forgot-password.ejs - bug fix /password/forgot

--- a/src/views/users/forgot-password.ejs
+++ b/src/views/users/forgot-password.ejs
@@ -29,7 +29,7 @@
                     <p class="mt-2 text-sm text-gray-600">Recuperar Contraseña</p>
                 </div>
 
-                <form action="/password/reset" method="post" class="space-y-6">
+                <form action="/password/forgot" method="post" class="space-y-6">
                     <div>
                         <label for="email" class="block text-sm font-medium text-gray-700">Correo electrónico</label>
                         <div class="mt-1 relative rounded-md shadow-sm">
