--- a/src/views/anime/anime-list.ejs
+++ b/src/views/anime/anime-list.ejs
@@ -279,6 +279,8 @@
         </div>
       <% }); %>
     </div>
+
+    <%- include('../components/donors') %>
   
     <div id="announcement-modal" class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 hidden z-50">
         <div class="bg-white p-6 rounded-lg shadow-lg max-w-md mx-auto">
