--- a/src/views/anime/anime-list-mobile.ejs
+++ b/src/views/anime/anime-list-mobile.ejs
@@ -277,7 +277,9 @@
                 <i class="fas fa-chevron-right text-2xl"></i>
             </button>
         </div>
-    </div>    
+    </div> 
+
+    <%- include('../components/donors') %>
                                  
     <!-- Announcement Modal -->
     <div id="announcement-modal" class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 hidden z-50">
