--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ver Anime Online — NakamaStream</title>
     <meta name="description" content="Disfruta de tus animes favoritos en línea en NakamaStream. Ofrecemos una amplia selección de series anime con subtítulos en español, en la mejor calidad y sin anuncios molestos.">
-    <link rel="shortcut icon" href="/src/public/favicons/favicon-16x16.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://github.com/NakamaStream/Resources/blob/main/NakamStream-logo-HD-removebg.png?raw=true" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/node_modules/nakamaui/Ui/nakamaUi.mian.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -144,6 +144,8 @@
             </div>
         </section>
 
+        <%- include('./components/donors') %>
+
         <section class="py-20">
             <div class="container mx-auto px-4 sm:px-6 lg:px-8">
                 <h2 class="text-3xl text-primary font-bold text-center mb-12">Preguntas Frecuentes</h2>
@@ -182,23 +184,8 @@
         </section>
     </main>
 
-    <footer class="bg-white shadow-md py-10">
-        <div class="container mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex flex-col items-center">
-                <div class="flex items-center space-x-4 mb-6">
-                    <img src="https://github.com/NakamaStream/Resources/blob/main/NakamStream-logo-HD-removebg.png?raw=true" alt="NakamaStream_Logo" class="h-12">
-                    <p class="text-gray-600">NakamaStream version: 1.0.3</p>
-                </div>
-                <ul class="flex flex-wrap justify-center space-x-4 mb-6">
-                    <li><a href="/" class="text-gray-700 hover:text-primary transition-colors duration-200">Inicio</a></li>
-                    <li><a href="/tos" class="text-gray-700 hover:text-primary transition-colors duration-200">Términos de Uso</a></li>
-                    <li><a href="/privacy" class="text-gray-700 hover:text-primary transition-colors duration-200">Política de Privacidad</a></li>
-                </ul>
-                <img src="https://github.com/NakamaStream/Resources/blob/main/Sstudiosdev-removebg%20(1).png?raw=true" alt="Logo del Patrocinador" class="h-8 mb-6">
-                <p class="text-gray-600 text-center">© 2024 NakamaStream - Ningún vídeo se encuentra alojado en nuestros servidores.</p>
-            </div>
-        </div>
-    </footer>
+    <%- include('components/footer') %>
+
     <script src="/src/public/js/tabs.js"></script>
 
     <script>
