--- a/src/views/anime/saved-anime-list-mobile.ejs
+++ b/src/views/anime/saved-anime-list-mobile.ejs
@@ -153,7 +153,9 @@
                 </a>
             <% }); %>
         </div>
-    </div>      
+    </div> 
+    
+    <%- include('../components/mobile/bottom-navigation') %>
     
     <%- include('../components/footer') %>
 
