--- a/src/views/anime/episode-detail.ejs
+++ b/src/views/anime/episode-detail.ejs
@@ -236,14 +236,20 @@
 
         function formatDate(dateString) {
             const options = { 
+                day: '2-digit', 
+                month: '2-digit', 
                 year: 'numeric', 
-                month: 'long', 
-                day: 'numeric', 
                 hour: '2-digit', 
                 minute: '2-digit', 
-                hour12: true 
+                second: '2-digit', 
+                hour12: true,  // Para mostrar AM/PM
+                timeZone: 'UTC'  // Usamos UTC
             };
-            return new Date(dateString).toLocaleString('en-US', options);
+            
+            const date = new Date(dateString);
+            
+            // Formateamos la fecha en UTC sin el nombre de la zona horaria
+            return date.toLocaleString('es-ES', options).replace(',', '');
         }
 
         function checkCooldown() {
@@ -305,6 +311,15 @@
             });
         }
 
+        // Función para censurar la mitad del correo
+        function censurarCorreo(correo) {
+            const [usuario, dominio] = correo.split('@');
+            const mitad = Math.floor(usuario.length / 2); // Encuentra la mitad del usuario
+            const usuarioCensurado = usuario.substring(0, mitad) + '*****'; // Censura la mitad del usuario
+
+            return usuarioCensurado + '@' + dominio; // Devuelve el correo censurado
+        }
+
         // Make showUserModal globally accessible
         window.showUserModal = function(username) {
             fetch(`/api/user/${username}`)
@@ -312,7 +327,11 @@
                 .then(user => {
                     document.getElementById('modalUserImage').src = user.profile_image_url || 'https://avatars.githubusercontent.com/u/168317328?s=200&v=4';
                     document.getElementById('modalUsername').textContent = user.username;
-                    document.getElementById('modalUserEmail').textContent = user.email;
+
+                    // Censura el correo antes de asignarlo al elemento
+                    const censuredEmail = censurarCorreo(user.email);
+                    document.getElementById('modalUserEmail').textContent = censuredEmail;
+
                     document.getElementById('modalUserBio').textContent = user.bio || 'No bio available';
                     document.getElementById('userModal').classList.remove('hidden');
                 });
