--- a/src/views/anime/anime-search.ejs
+++ b/src/views/anime/anime-search.ejs
@@ -153,6 +153,8 @@
       <i class="fas fa-chevron-up"></i>
     </button>
 
+    <%- include('../components/footer') %>
+
     <script src="/src/public/js/anime/anime-list.js"></script>
     <script src="/src/public/js/anime/search-anime.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
