--- a/src/views/anime/anime-search-mobile.ejs
+++ b/src/views/anime/anime-search-mobile.ejs
@@ -178,11 +178,15 @@
                 <% }); %>
             </div>
         </div>        
-    
+
     <!-- Botón para volver arriba -->
-    <button id="back-to-top" class="fixed bottom-5 right-5 bg-primary text-white rounded-full p-3 shadow-lg hover:bg-orange-600 transition duration-300 hidden" aria-label="Volver arriba">
-      <i class="fas fa-chevron-up"></i>
+    <button id="back-to-top" class="fixed bottom-20 right-5 bg-primary text-white rounded-full p-3 shadow-lg hover:bg-orange-600 transition duration-300 hidden" aria-label="Volver arriba">
+        <i class="fas fa-chevron-up"></i>
     </button>
+
+    <%- include('../components/mobile/bottom-navigation') %>
+
+    <%- include('../components/footer') %>
 
     <script src="/src/public/js/anime/anime-list.js"></script>
     <script src="/src/public/js/anime/search-anime-mobile.js"></script>
