--- a/src/views/anime/anime-list-mobile.ejs
+++ b/src/views/anime/anime-list-mobile.ejs
@@ -277,8 +277,8 @@
                 <i class="fas fa-chevron-right text-2xl"></i>
             </button>
         </div>
-    </div> 
-
+    </div>
+    
     <%- include('../components/donors') %>
                                  
     <!-- Announcement Modal -->
@@ -291,9 +291,11 @@
     </div>
 
     <!-- Botón para volver arriba -->
-    <button id="back-to-top" class="fixed bottom-5 right-5 bg-primary text-white rounded-full p-3 shadow-lg hover:bg-orange-600 transition duration-300 hidden" aria-label="Volver arriba">
+    <button id="back-to-top" class="fixed bottom-20 right-5 bg-primary text-white rounded-full p-3 shadow-lg hover:bg-orange-600 transition duration-300 hidden" aria-label="Volver arriba">
         <i class="fas fa-chevron-up"></i>
     </button>
+
+    <%- include('../components/mobile/bottom-navigation') %>
 
     <%- include('../components/footer') %>
 
